--- a/WebPage/Index.html
+++ b/WebPage/Index.html
@@ -4,29 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A page for you</title>
+    <title>Sush Cook Book</title>
     <style>
         body {
             text-align: center;
         }
 
-        div.container {
-            width: 400px;
-            margin: 0 auto;
-        }
-
-        .love {
-            font-size: 4em;
-        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>This is a page for you</h1>
-        <div class="vibe">You are great!</div>
-        <div class="love">
-            ❤️
-        </div>
+        <h1>This is my cooking blog</h1>
+        <div class="vibe">Great Recipes!</div>  
     </div>
     <script src="vibe.js"></script>
 </body>
