--- a/WebPage/Index.html
+++ b/WebPage/Index.html
@@ -4,19 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sush Cook Book</title>
+    <title>Spring Transits Demo</title>
     <style>
         body {
-            text-align: center;
+            text-align: Left;
         }
-
     </style>
+   
 </head>
 <body>
+
     <div class="container">
-        <h1>This is my cooking blog</h1>
-        <div class="vibe">Great Recipes!</div>  
+        <img src="C:\Users\sushm\Source\Repos\WebPage\Images\spring.jpg" width="1520" height="200" />
     </div>
-    <script src="vibe.js"></script>
+    <div id="main">
+
+        <h1>
+            Spring Transits 
+            <button style="float: right;">Home</button> 
+            <button style="float: right;">AboutUs</button> 
+            <button style="float: right;">Contcact US</button>
+
+        </h1>
+    </div>
+
+
+    <p>
+        Spring Transits is a company that aspires to enable women in a very unique and sustainable
+        way, one cohort at a time, to pursue fulfilling technical careers in a flexible remote work
+        setup. We build an overarching ecosystem for our cohorts to develop their skills, regain
+        confidence, and pivot as needed. We match our people with mentors who help them grow
+        exponentially through knowledge sharing and one-on-one coaching. Our grooming philosophy
+        helps build a culture where a group of individuals gains experience in a safe and flexible
+        setting. We team with our partners to work on real products and services helping
+        our cohorts gain valuable experience in the marketplace. Our mission is to help women
+        get back to the workforce with incredible confidence and right skills, we also want to be
+        recognized as a company that deeply cares about the process of grooming individuals.
+    </p> 
+
 </body>
 </html>
